<resources>
    <string name="app_name">PureNexus settings</string>
    <string name="about_frag_title">About</string>
    <string name="pushbullet_data" translatable="false">https://www.pushbullet.com/channel?tag=purenexus</string>
    <string name="gplus_data" translatable="false">https://plus.google.com/communities/103055954354785266764</string>
    <string name="twit_data" translatable="false">https://twitter.com/BeansTown106</string>
    <string name="payp_data" translatable="false">http://forum.xda-developers.com/donatetome.php?u=4395895</string>
    <string name="miscinfo_title">App Info</string>
    <string name="miscinfo_summary">Click here for changelog and app-specific credits</string>
    <string name="nexus_useful">Useful links</string>
    <string name="nexus_updates">Pushbullet update notifications</string>
    <string name="lead_dev">Lead Developer</string>
    <string name="beans">BeansTown106</string>
    <string name="beans_sum">Main PureNexus maintainer</string>
    <string name="beans_twit">BeansTown\'s Twitter</string>
    <string name="nexus_gplus">PureNexus Google+ community</string>
    <string name="donate">Donate to support development</string>
    <string name="contribute">Contributors</string>
    <string name="devonte">Dwitherell</string>
    <string name="devonte_sum">Coder/tweaker</string>
    <string name="nacha">NathanChance</string>
    <string name="mod_sum">Support/moderation</string>
    <string name="daveya">DaveyAnnihilation</string>
    <string name="gfx_sum">Graphics/icons</string>
    <string name="surge">Surge1223</string>
    <string name="bajasur">Bajasur</string>
    <string name="tweak_sum">Misc Tweaks</string>
    <string name="click1">Wouldn\'t it be neat if this did something&#8230;</string>
    <string name="click2">It\'s not like pressing this %1$d times will do anything&#8230; lay off, sheesh</string>
    <string name="click3">&#8230; %1$d times now?! Ok, just quit. I\'m going to act like nothing happened, so stop</string>
    <string name="tab_indicator_alpha" translatable="false">0x26</string>
    <string name="alertdiagtitle">Changelog v1.0</string>
    <string name="setpositive">OK</string>
    <string name="setnegative">Credits</string>
    <string name="changelog"><![CDATA[
&#8226; Made a groovy little settings app<br />
&#8226; Did lots of minor UI things<br />
&#160; &#8226; Animated fragment switching and backstack handling<br />
&#160; &#8226; Actionbar options when interacting with navdrawer<br />
&#8226; Modified margaritov/SlimRom color picker<br />
&#160; &#8226; Added alpha slider text - represents current alpha as percentage<br />
&#160; &#8226; Fixed minor hex-picking int-to-HSV-to-int issue<br />
&#160; &#8226; Edited color picker layout to show better in landscape<br />
&#160; &#8226; Added reset button for default color in color picker<br />
&#160; &#8226; Custom preview options setable via longpress<br />
&#8226; Added ability to hide/show app in app drawer<br />
&#8226; Added some fun extras<br />
&#8226; Incorporated Chainfire\'s libsuperuser to handle root tasks<br />]]></string>
    <string name="credits"><![CDATA[
&#8226; Chainfire for the easy-to-implement libsuperuser library<br />
&#8226; margaritov/slim rom for the color picker base<br />
&#8226; Beans for the rom and an excuse to tinker<br />
&#8226; Cheekybastards for living up to their namesake<br />
&#8226; DaveyAnnihilation for all the help with setting things up theme-friendly and general aesthetics<br />
&#8226; Gunthermic, for testing and great ideas with the colorpicker<br />
&#8226; All contributors to stackoverflow or various other java/android app making resources<br />
&#8226; Those not mentioned but should have been<br />]]></string>
    <string name="buildprop_frag_title">Build prop</string>
    <string name="buildprop_frag_title2">Edit build prop</string>
    <string name="editprop_key">Property Key</string>
    <string name="editprop_name">Property Name</string>
    <string name="editprop_unsaved_changes_title">Unsaved Changes</string>
    <string name="editprop_unsaved_changes_message">Would you like to set this property?</string>
    <string name="editprop_delete_item_title">Delete Item</string>
    <string name="editprop_delete_item_message">Would you like to delete this property?</string>
    <string name="restore_loc">build.prop restored from %1$s</string>
    <string name="edit_backup_loc">Edit saved and a backup was made at %1$s</string>
    <string name="backup_loc">build.prop backup at %1$s</string>
    <string name="wait_title">Hold on a sec</string>
    <string name="wait_message">Loading stuff and checking for root&#8230;</string>
    <string name="clock_frag_title">cLock</string>
    <string name="clockdate_frag_title">Clock and date</string>
    <string name="clock_frag_summary">Custom clock and date options</string>
    <string name="clock_title_enable">Alignment</string>
    <string name="status_bar_show_clock_title">Show clock and date</string>
    <string name="status_bar_clock_seconds_title">Show seconds</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="left_clock">Left clock</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_am_pm_date_normal">Normal</string>
    <string name="clock_am_pm_date_small">Small</string>
    <string name="clock_am_pm_date_none">Hidden</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint" translatable="false">#FFDDDDDD</string>
    <string name="hex_check_button_text">PREVIEW</string>
    <string name="hex_reset_button_text">RESET</string>
    <string name="color_right_arrow" translatable="false">"→"</string>
    <string name="color_down_arrow" translatable="false">"↓"</string>
    <string name="longpress_info">Longpress box to save color</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="toolinfo_frag_title">Tools and info</string>
    <string name="device_info_title">Phone info</string>
    <string name="device_summ">Get general info about your device</string>
    <string name="title_battery_history">Battery history</string>
    <string name="summary_battery_history">Summary of how battery has been used</string>
    <string name="title_usage_statistics">Usage statistics</string>
    <string name="summary_usage_statistics">Summary of application usage</string>
    <string name="buildproptitle">Build.prop editor</string>
    <string name="buildpropsummary">Click to open build.prop editor</string>
    <string name="fiswitchtitle">Project Fi Tools</string>
    <string name="fiswitchsummary">Click for useful dial codes</string>
    <string name="display_frag_title">Display</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="display_color_title">Screen color &amp; appearance</string>
    <string name="display_color_summary">screen color controls and night mode</string>
    <string name="led_category">Led controls</string>
    <string name="edit_light_settings">Edit light settings</string>
    <string name="pulse_speed_title">Pulse length and speed</string>
    <string name="default_time">Normal</string>
    <string name="custom_time">Custom</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="pulse_length_always_on">Always on</string>
    <string name="pulse_length_very_short">Very short</string>
    <string name="pulse_length_short">Short</string>
    <string name="pulse_length_normal">Normal</string>
    <string name="pulse_length_long">Long</string>
    <string name="pulse_length_very_long">Very long</string>
    <string name="pulse_speed_very_fast">Very fast</string>
    <string name="pulse_speed_fast">Fast</string>
    <string name="pulse_speed_normal">Normal</string>
    <string name="pulse_speed_slow">Slow</string>
    <string name="pulse_speed_very_slow">Very slow</string>
    <string name="battery_light_frag_title">Battery light</string>
    <string name="battery_low_pulse_title">Pulse if battery low</string>
    <string name="battery_light_list_title">Colors</string>
    <string name="battery_light_low_color_title">Battery low</string>
    <string name="battery_light_medium_color_title">Charging</string>
    <string name="battery_light_full_color_title">Fully charged</string>
    <string name="notification_light_frag_title">Notification light</string>
    <string name="notification_light_general_title">General</string>
    <string name="notification_light_applist_title">Apps</string>
    <string name="dial1">Sprint</string>
    <string name="dial1_sum">Force jump to Sprint</string>
    <string name="dial2">T-Mobile</string>
    <string name="dial2_sum">Force jump to T-Mobile</string>
    <string name="dial3">Next carrier</string>
    <string name="dial3_sum">Force jump to next carrier</string>
    <string name="dial4">Auto-switch</string>
    <string name="dial4_sum">(Re)Enable auto switching</string>
    <string name="dial5">Repair</string>
    <string name="dial5_sum">Resets everything</string>
    <string name="dial6">Info</string>
    <string name="dial6_sum">Current network info</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="status_bar_traffic_summary">Network traffic options</string>
    <string name="nettraffic_frag_title">Network traffic</string>
    <string name="show_battery_percentage">Show battery percentage</string>
    <string name="show_battery_percentage_summary">Show battery percentage when not charging</string>
    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="double_tap_to_sleep_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="status_bar_icon_blacklist_title">Status bar icons</string>
    <string name="status_bar_icon_blacklist_summary">Configure what icons are shown on status bar</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="action_about">About</string>
    <string name="action_launchhide">Drawer hide</string>
    <string name="action_search">Search</string>
    <string name="action_theme">App Theme</string>
    <string name="deleteprop">Delete</string>
    <string name="cancelprop">Cancel</string>
    <string name="editprop_backup">Backup</string>
    <string name="editprop_restore">Restore</string>
    <string name="action_fabhide">Show FAB</string>
</resources>