<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The Pure Nexus Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pure="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/card_layout_view">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:fadingEdgeLength="@dimen/card_fade_edge"
            android:requiresFadingEdge="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cardview_pref_height"
                    pure:cardUseCompatPadding="true"
                    pure:cardElevation="@dimen/cardview_elevate"
                    pure:cardBackgroundColor="?attr/card_bg"
                    pure:cardCornerRadius="@dimen/cardview_rounding">

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/dialcode1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/cardview_padding"
                        android:paddingBottom="@dimen/cardview_padding"
                        android:paddingStart="@dimen/cardview_pref_padding"
                        android:paddingEnd="@dimen/cardview_padding"
                        android:clickable="true"
                        android:background="?android:selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial1"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="bottom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial1_sum"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="top" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cardview_pref_height"
                    pure:cardUseCompatPadding="true"
                    pure:cardElevation="@dimen/cardview_elevate"
                    pure:cardBackgroundColor="?attr/card_bg"
                    pure:cardCornerRadius="@dimen/cardview_rounding">

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/dialcode2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/cardview_padding"
                        android:paddingBottom="@dimen/cardview_padding"
                        android:paddingStart="@dimen/cardview_pref_padding"
                        android:paddingEnd="@dimen/cardview_padding"
                        android:clickable="true"
                        android:background="?android:selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial2"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="bottom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial2_sum"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="top" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cardview_pref_height"
                    pure:cardUseCompatPadding="true"
                    pure:cardElevation="@dimen/cardview_elevate"
                    pure:cardBackgroundColor="?attr/card_bg"
                    pure:cardCornerRadius="@dimen/cardview_rounding">

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/dialcode7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/cardview_padding"
                        android:paddingBottom="@dimen/cardview_padding"
                        android:paddingStart="@dimen/cardview_pref_padding"
                        android:paddingEnd="@dimen/cardview_padding"
                        android:clickable="true"
                        android:background="?android:selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial7"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="bottom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial7_sum"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="top" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cardview_pref_height"
                    pure:cardUseCompatPadding="true"
                    pure:cardElevation="@dimen/cardview_elevate"
                    pure:cardBackgroundColor="?attr/card_bg"
                    pure:cardCornerRadius="@dimen/cardview_rounding">

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/dialcode3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/cardview_padding"
                        android:paddingBottom="@dimen/cardview_padding"
                        android:paddingStart="@dimen/cardview_pref_padding"
                        android:paddingEnd="@dimen/cardview_padding"
                        android:clickable="true"
                        android:background="?android:selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial3"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="bottom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial3_sum"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="top" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cardview_pref_height"
                    pure:cardUseCompatPadding="true"
                    pure:cardElevation="@dimen/cardview_elevate"
                    pure:cardBackgroundColor="?attr/card_bg"
                    pure:cardCornerRadius="@dimen/cardview_rounding">

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/dialcode4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/cardview_padding"
                        android:paddingBottom="@dimen/cardview_padding"
                        android:paddingStart="@dimen/cardview_pref_padding"
                        android:paddingEnd="@dimen/cardview_padding"
                        android:clickable="true"
                        android:background="?android:selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial4"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="bottom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial4_sum"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="top" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cardview_pref_height"
                    pure:cardUseCompatPadding="true"
                    pure:cardElevation="@dimen/cardview_elevate"
                    pure:cardBackgroundColor="?attr/card_bg"
                    pure:cardCornerRadius="@dimen/cardview_rounding">

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/dialcode5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/cardview_padding"
                        android:paddingBottom="@dimen/cardview_padding"
                        android:paddingStart="@dimen/cardview_pref_padding"
                        android:paddingEnd="@dimen/cardview_padding"
                        android:clickable="true"
                        android:background="?android:selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial5"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="bottom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial5_sum"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="top" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cardview_pref_height"
                    pure:cardUseCompatPadding="true"
                    pure:cardElevation="@dimen/cardview_elevate"
                    pure:cardBackgroundColor="?attr/card_bg"
                    pure:cardCornerRadius="@dimen/cardview_rounding">

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/dialcode6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/cardview_padding"
                        android:paddingBottom="@dimen/cardview_padding"
                        android:paddingStart="@dimen/cardview_pref_padding"
                        android:paddingEnd="@dimen/cardview_padding"
                        android:clickable="true"
                        android:background="?android:selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial6"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="bottom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dial6_sum"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="?attr/CustomCardTitle"
                            android:gravity="top" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_phonesettings"
        pure:backgroundTint="@color/fab_color"
        pure:rippleColor="@color/fab_ripple"
        pure:borderWidth="0dp"
        pure:elevation="5dp"
        pure:pressedTranslationZ="10dp"
        pure:layout_anchor="@id/card_layout_view"
        pure:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>
